2017-02-22: First release
2017-02-23: Add unit tests and coding standards
2017-05-04: Add support for GZIP compression
2017-05-16: Add description to ticket resource and update bulk example
2017-05-18: Update tests
2017-05-26: Add support for session resource
2017-05-31: Add scale factor for inverter endpoint
2017-06-29: Support Users and Responsibilities endpoint
2017-08-09: Add battery, stringboxes, ticket attachment and support OAuth2
2017-09-13: Add ticket history , extend update and create ticket endpoint in order to access assignee
2017-10-19: Add serial UTC DateTime as return values, create comment support createdAt
2017-10-19: Create comment accepts optional created at timestamp
2017-11-08: Add firmware property to devices except stringboxes
2018-02-08: Add system picture, hourly resolution for measurements and hasVcom property.
2018-03-21: Update model namespace.